// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react/UICheckbox renders correctly - basic 1`] = `
<div>
  <div
    class="ui-checkbox ui-checkbox--large"
  >
    <div
      class="ui-checkbox__wrapper"
    >
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option1"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option2"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option3"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option4"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`react/UICheckbox renders correctly - disabled 1`] = `
<div>
  <div
    class="ui-checkbox ui-checkbox--disabled"
  >
    <div
      class="ui-checkbox__wrapper"
    >
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="-1"
          type="checkbox"
          value="option1"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="-1"
          type="checkbox"
          value="option2"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="-1"
          type="checkbox"
          value="option3"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="-1"
          type="checkbox"
          value="option4"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`react/UICheckbox renders correctly - with helper 1`] = `
<div>
  <div
    class="ui-checkbox"
  >
    <div
      class="ui-checkbox__wrapper"
    >
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option1"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option2"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option3"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option4"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
    <span
      class="ui-checkbox__wrapper__helper"
    >
      test
    </span>
  </div>
</div>
`;

exports[`react/UICheckbox renders correctly - with id 1`] = `
<div>
  <div
    class="ui-checkbox"
    id="test"
  >
    <div
      class="ui-checkbox__wrapper"
    >
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option1"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option2"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option3"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option4"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`react/UICheckbox renders correctly - with label 1`] = `
<div>
  <div
    class="ui-checkbox"
  >
    <label
      class="ui-checkbox__label"
      for="z8a8d7a5zad4"
    >
      test
    </label>
    <div
      class="ui-checkbox__wrapper"
    >
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option1"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option2"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option3"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option4"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`react/UICheckbox renders correctly - with listeners 1`] = `
<div>
  <div
    class="ui-checkbox"
  >
    <div
      class="ui-checkbox__wrapper"
    >
      <label
        class="ui-checkbox__wrapper__option ui-checkbox__wrapper__option--checked"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option1"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option ui-checkbox__wrapper__option--checked"
      >
        <input
          checked=""
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option2"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option3"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option4"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`react/UICheckbox renders correctly - with option disabled 1`] = `
<div>
  <div
    class="ui-checkbox"
  >
    <div
      class="ui-checkbox__wrapper"
    >
      <label
        class="ui-checkbox__wrapper__option ui-checkbox__wrapper__option--disabled"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          disabled=""
          name="test"
          tabindex="-1"
          type="checkbox"
          value="option5"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 5
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`react/UICheckbox renders correctly - with value 1`] = `
<div>
  <div
    class="ui-checkbox"
  >
    <div
      class="ui-checkbox__wrapper"
    >
      <label
        class="ui-checkbox__wrapper__option ui-checkbox__wrapper__option--checked"
      >
        <input
          checked=""
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option1"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 1
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option2"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 2
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option ui-checkbox__wrapper__option--checked"
      >
        <input
          checked=""
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option3"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 3
        </span>
      </label>
      <label
        class="ui-checkbox__wrapper__option"
      >
        <input
          class="ui-checkbox__wrapper__option__checkbox"
          name="test"
          tabindex="0"
          type="checkbox"
          value="option4"
        />
        <span
          class="ui-checkbox__wrapper__option__label"
        >
          Option 4
        </span>
      </label>
    </div>
  </div>
</div>
`;
